# stt

./: CMakeLists.txt  LICENSE  README.md  clickable.yaml  main.cpp  manifest.json.in  setup.sh  snapcraft.yaml  stt.apparmor  stt.desktop.in  stt.sh
libs/vosk-arm64/: vosk_api.h
plugins/: CMakeLists.txt
plugins/SpeechRecognizer/: CMakeLists.txt  plugin.cpp  plugin.h  qmldir  speech_recognizer.cpp  speech_recognizer.h
po/: stt.surajyadav.pot
qml/: Main.qml
